src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-dhP0.5-b.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault window height: P0.5\nborder on"
expression: snapshot
---
initial configure:
size: 1240 × 328, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 328, bounds: 1240 × 680, states: [Activated]
